fixed github link bug

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<p class="footer-links">
 				<a href="#">Home</a>
 				·
-				<a href="#https://github.com/jj8huang">Github</a>
+				<a href="https://github.com/jj8huang">Github</a>
 				·
 				<a href="https://www.linkedin.com/in/john-huang-7a6596138/?trk=public-profile-join-page">LinkedIn</a>
 				·
