Opens github in a new tab

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 								</button>
 							</li>
 							<li>
-								<button id="github_btn" class = "btn">
-									<a class = "content_link" href="https://github.com/jj8huang">
+								<button id="github_btn" class = "btn" onclick = "window.open('https://github.com/jj8huang','_blank')">
+									<a class = "content_link">
 										Github
 									</a>
 								</button>
