Changed linkedin url

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				·
 				<a href="https://github.com/jj8huang">Github</a>
 				·
-				<a href="https://www.linkedin.com/in/john-huang-7a6596138/?trk=public-profile-join-page">LinkedIn</a>
+				<a href="https://www.linkedin.com/in/jj8huang">LinkedIn</a>
 				·
 				<a href="mailto:johnjunhh@gmail.com">Contact</a>
 			</p>
