Added resume page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</li>
 							<li>
 								<button id="resume_btn" class ="btn">
-									<a class = "content_link" href="file:///C:/Users/John/Documents/Projects/jjhuang/pdf/JunhaoJohnHuangResume.pdf">
+									<a class = "content_link" href="lib/JunhaoJohnHuangResume.pdf">
 										Resume
 									</a>
 								</button>
