Changed images for buttons

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		  <h2 class = "project_list_header">Projects</h2>
 		  <!-- Trigger the modal with a button -->
 		  	 <button type="button" class="btn btn-info btn-lg weather-btn" data-toggle="modal" data-target="#weatherModal">
-			 	<img src = "img/testmodal.png" />
+			 	<img src = "img/weather_to_bring_it_btn.png" />
 			 </button>
 
 			 <!-- Modal -->
@@ -96,7 +96,7 @@
 			        </div>
 			        <div class="modal-body">
 			        	<div>
-			        		<img src = "img/testmodal.png"  class="modal-img"/>
+			        		<img src = "img/weather_to_bring_it_btn.png"  class="modal-img"/>
 			        	</div>
 			        	<div class = "modal-blurb">
 				          <p>&emsp; &emsp; Created at HackWestern IV. This web application gives the user the weather forecast for the next week in any city in the world. It gives details about the temperature, the precipitation, and the wind speed. In addition, it will suggest to the user what to bring that day. Is it raining? Then perhaps bring an umbrella. Oh but maybe it’s too windy that day? It would be a better idea to just bring your rain coat so you don’t have to buy a new umbrella!
@@ -113,7 +113,7 @@
 			  </div>
 
 			 <button type="button" class="btn btn-info btn-lg coloured-calc-btn" data-toggle="modal" data-target="#colouredCalcModal">
-			 	<img src = "img/testmodal.png" />
+			 	<img src = "img/coloured_calculator_btn.png" />
 			 </button>
 
 				 <!-- Modal -->
@@ -126,7 +126,7 @@
 			        </div>
 			        <div class="modal-body">
 			        	<div>
-			        		<img src = "img/testmodal.png"  class="modal-img"/>
+			        		<img src = "img/coloured_calculator_btn.png"  class="modal-img"/>
 			        	</div>
 			        	<div class = "modal-blurb">
 				          <p>&emsp; &emsp; An aesthetically pleasing calculator that allows the user to make basic mathematical operations. It uses soft pastel colours to make even math look prettier.
@@ -143,7 +143,7 @@
 			  </div>
 
 			 <button type="button" class="btn btn-info btn-lg function-btn" data-toggle="modal" data-target="#functionModal">
-			 	<img src = "img/testmodal.png" />
+			 	<img src = "img/visual_function_simulator_btn.png" />
 			 </button>
  
  			<!-- Modal -->
@@ -156,7 +156,7 @@
 		        </div>
 		        <div class="modal-body">
 		        	<div>
-		        		<img src = "img/testmodal.png"  class="modal-img"/>
+		        		<img src = "img/visual_function_simulator_btn.png"  class="modal-img"/>
 		        	</div>
 			        <div class = "modal-blurb">
 			          <p>&emsp; &emsp; A Calculator that graphs different functions. It can be given multiple forms, vertex form, standard form, etc.
