edited some descriptions

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		        		<img src = "img/visual_function_simulator_btn.png"  class="modal-img"/>
 		        	</div>
 			        <div class = "modal-blurb">
-			          <p>&emsp; &emsp; A Calculator that graphs different functions. It can be given multiple forms, vertex form, standard form, etc.
+			          <p>&emsp; &emsp; A calculator that graphs different functions. It can be given multiple forms including vertex form, standard form, etc.
 			          <br>
 				      <br>
 				      Tools: Java</p>
