--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <title>Junhao John Huang</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/jjweb.css">  
+  <link rel="stylesheet" href="css/jjweb.css">
+  <link rel="shortcut icon" type="img/web_icon.png" href="img/web_icon.png" />  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="js/jjweb.js"></script>
