--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		  			</h2>
 		  			<div class="my_blurb">
 		  				<p class="blurb_text">
-		  					&emsp; &emsp; I'm John, and I'm a 3rd year Software Engineering student attending the University of Waterloo. I am interested in many fields of the technical industry and design. In my spare time I enjoy drawing and painting both traditionally and digitally and thinking of new ideas to design my next project! If you have any questions feel free to contact me through email or LinkedIn, I love meeting new people. Thanks for taking the time to explore my site and I hope you find something that interests you here!
+		  					I'm John, and I'm a 3rd year Software Engineering student attending the University of Waterloo. I am interested in many fields of the technical industry and design. In my spare time I enjoy drawing and painting both traditionally and digitally and thinking of new ideas to design my next project! If you have any questions feel free to contact me through email or LinkedIn, I love meeting new people. Thanks for taking the time to explore my site and I hope you find something that interests you here!
 		  				</p>
 		  			</div>
 				</div>
@@ -100,7 +100,7 @@
 			        		<img src = "img/weather_to_bring_it_btn.png"  class="modal-img"/>
 			        	</div>
 			        	<div class = "modal-blurb">
-				          <p>&emsp; &emsp; Created at HackWestern IV. This web application gives the user the weather forecast for the next week in any city in the world. It gives details about the temperature, the precipitation, and the wind speed. In addition, it will suggest to the user what to bring that day. Is it raining? Then perhaps bring an umbrella. Oh but maybe it’s too windy that day? It would be a better idea to just bring your rain coat so you don’t have to buy a new umbrella!
+				          <p>Created at HackWestern IV. This web application gives the user the weather forecast for the next week in any city in the world. It gives details about the temperature, the precipitation, and the wind speed. In addition, it will suggest to the user what to bring that day. Is it raining? Then perhaps bring an umbrella. Oh but maybe it’s too windy that day? It would be a better idea to just bring your rain coat so you don’t have to buy a new umbrella!
 				          <br>
 				          <br>
 				          Tools: ReactJS</p>
@@ -130,7 +130,7 @@
 			        		<img src = "img/coloured_calculator_btn.png"  class="modal-img"/>
 			        	</div>
 			        	<div class = "modal-blurb">
-				          <p>&emsp; &emsp; An aesthetically pleasing calculator that allows the user to make basic mathematical operations. It uses soft pastel colours to make even math look prettier.
+				          <p>An aesthetically pleasing calculator that allows the user to make basic mathematical operations. It uses soft pastel colours to make even math look prettier.
 				          <br>
 				          <br>
 				          Tools: HTML5, CSS3, JavaScript</p>
@@ -160,7 +160,7 @@
 		        		<img src = "img/visual_function_simulator_btn.png"  class="modal-img"/>
 		        	</div>
 			        <div class = "modal-blurb">
-			          <p>&emsp; &emsp; A calculator that graphs different functions. It can be given multiple forms including vertex form, standard form, etc.
+			          <p>A calculator that graphs different functions. It can be given multiple forms including vertex form, standard form, etc.
 			          <br>
 				      <br>
 				      Tools: Java</p>
