Updated minor text field to be 4th year. Posted updated resume

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		  			</h2>
 		  			<div class="my_blurb">
 		  				<p class="blurb_text">
-		  					I'm John, and I'm a 3rd year Software Engineering student attending the University of Waterloo. I am interested in many fields of the technical industry and design. In my spare time I enjoy drawing and painting both traditionally and digitally and thinking of new ideas to design my next project! If you have any questions feel free to contact me through email or LinkedIn, I love meeting new people. Thanks for taking the time to explore my site and I hope you find something that interests you here!
+		  					I'm John, and I'm a 4th year Software Engineering student attending the University of Waterloo. I am interested in many fields of the technical industry and design. In my spare time I enjoy drawing and painting both traditionally and digitally and thinking of new ideas to design my next project! If you have any questions feel free to contact me through email or LinkedIn, I love meeting new people. Thanks for taking the time to explore my site and I hope you find something that interests you here!
 		  				</p>
 		  			</div>
 				</div>
